fixed formatting issue that allows margins to be retained on mobile sizes

--- a/projects/bookmarks/styles.css
+++ b/projects/bookmarks/styles.css
@@ -14,7 +14,8 @@
 .removegroup {
   margin-top: 12px;
 }
-/* .card {
-  margin-left: 6px;
-  margin-right: 6px;
-} */
+
+.cardcontainer {
+  margin-left: -6px;
+  margin-right: -6px;
+}
